added function if user does not sign in

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,15 +21,20 @@
     <main>
       {{{ body }}}
       <nav>
+        {{#if loggedIn}}
         <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
         <a href="/login">login</a>
+        {{/if}}
       </nav>
     </main>
     <footer>
       Thanks for visiting!
     </footer>
   </div>
+  {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
